--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -40,7 +40,8 @@
     <string name="btn_contact">Contacto Realizado</string>
     <string name="btn_company">Seleccione Compañía</string>
 
-    <string name="Date">Fecha: </string>
+    <string name="Company">Compañía: </string>
+    <string name="Plates">Placas: </string>
     <string name="FormID">ID Bitácora: </string>
 
     <string name="info_textview">
